fix: cards spacing

--- a/src/Components/Layout/Layout.css
+++ b/src/Components/Layout/Layout.css
@@ -19,7 +19,7 @@ body {
 .scroll {
   overflow-y: scroll;
   height: calc(100vh - 95px);
-  padding-bottom: 30px;
+  padding-bottom: 45px;
 }
 
 .scroll::-webkit-scrollbar {
